--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -34,6 +34,7 @@ dependencies {
         api "com.vmware.gemfire:geode-lucene:$gemfireVersion"
         api "com.vmware.gemfire:geode-tcp-server:$gemfireVersion"
         api "com.vmware.gemfire:geode-deployment-legacy:$gemfireVersion"
+        api "com.vmware.gemfire:gemfire-version:$gemfireVersion"
 
     implementation 'javax.cache:cache-api:1.1.1'
     implementation 'org.springframework:spring-context-support:5.3.25'
@@ -135,3 +136,5 @@ repositories {
     }
   }
 }
+
+tasks.withType(Copy).all { duplicatesStrategy 'exclude' }
