--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 
 #
-# Copyright (c) VMware, Inc. 2022. All rights reserved.
+# Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
@@ -8,13 +8,13 @@ group = com.vmware.gemfire
 version = 1.1.0-build.9999
 gemfireBaseVersion = 10.0
 
-additionalMavenRepoURLs=''
+additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=10.0.0-build.0
+gemfireVersion=10.0.0-build.1634
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
