--- a/gradle.properties
+++ b/gradle.properties
@@ -8,13 +8,13 @@ group = com.vmware.gemfire
 version = 1.0.0-build.9999
 gemfireBaseVersion = 10.0
 
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=10.0.0-build.1648
+gemfireVersion=10.0.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
