--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 #
-# Copyright (c) VMware, Inc. 2022. All rights reserved.
+# Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
 group = com.vmware.gemfire
-version = 1.0.0-build.9999
+version = 1.0.1-build.9999
 gemfireBaseVersion = 9.15
 
 additionalMavenRepoURLs=''
@@ -13,7 +13,7 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=9.15.3
+gemfireVersion=9.15.4
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
