SDGF-55: Change dependencies on GemFire libraries to be more like a "provided" scope.

--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -15,29 +15,37 @@ project.ext.set("pomProjectArtifactName", "spring-data-3.0-gemfire-${gemfireBase
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
 
 dependencies {
-  api "com.vmware.gemfire:gemfire-core:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-logging:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-cq:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-wan:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-gfsh:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-lucene:1.0.0-build.172"
-  api "com.vmware.gemfire:gemfire-tcp-server:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
-  api "com.vmware.gemfire:gemfire-version:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-core:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-logging:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-cq:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-wan:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-gfsh:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-lucene:1.0.0-build.172"
+  compileOnly "com.vmware.gemfire:gemfire-tcp-server:$gemfireVersion"
+  compileOnly "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
   api 'org.springframework:spring-context-support:6.0.4'
   api 'org.springframework:spring-tx:6.0.4'
   api 'org.springframework:spring-web:6.0.4'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
-  api 'org.apache.shiro:shiro-spring:1.10.0'
-  api 'org.aspectj:aspectjweaver:1.9.9.1'
-  api 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
-  api 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+  implementation 'org.apache.shiro:shiro-spring:1.10.0'
+  implementation 'org.aspectj:aspectjweaver:1.9.9.1'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
   runtimeOnly 'antlr:antlr:2.7.7'
   compileOnly('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
+
+  testImplementation "com.vmware.gemfire:gemfire-core:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-logging:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-cq:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-wan:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-gfsh:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-lucene:1.0.0-build.172"
+  testImplementation "com.vmware.gemfire:gemfire-tcp-server:$gemfireVersion"
+  testImplementation "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
