--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -30,10 +30,10 @@ dependencies {
   api 'org.springframework:spring-tx:5.3.25'
   api 'org.springframework:spring-web:5.3.25'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
-  implementation 'org.apache.shiro:shiro-spring:1.10.1'
-  implementation 'org.aspectj:aspectjweaver:1.9.19'
-  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+  api 'org.apache.shiro:shiro-spring:1.10.1'
+  api 'org.aspectj:aspectjweaver:1.9.19'
+  api 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+  api 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
   runtimeOnly 'antlr:antlr:2.7.7'
   compileOnly('javax.enterprise:cdi-api:1.0') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
