--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=10.0.0-build.1645
+gemfireVersion=10.0.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
