--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,10 @@
 
 pluginManagement {
   includeBuild('build-tools/publishing')
+  repositories {
+    maven { url 'https://repo.spring.io/milestone' }
+    gradlePluginPortal()
+  }
 }
 
 include 'spring-data-vmware-gemfire'
