--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -8,10 +8,11 @@ plugins {
   id "io.freefair.lombok" version "8.0.1"
   id 'gemfire-repo-artifact-publishing'
   id 'spring-java-jar'
+  id 'io.spring.dependency-management' version '1.1.0'
 }
 
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
-project.ext.set("pomProjectArtifactName", "spring-data-3.0-gemfire-${gemfireBaseVersion}")
+project.ext.set("pomProjectArtifactName", "spring-data-3.1-gemfire-${gemfireBaseVersion}")
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
 
 dependencies {
@@ -24,9 +25,9 @@ dependencies {
   compileOnly "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:6.0.7'
-  api 'org.springframework:spring-tx:6.0.7'
-  api 'org.springframework:spring-web:6.0.7'
+  api 'org.springframework:spring-context-support:6.0.8'
+  api 'org.springframework:spring-tx:6.0.8'
+  api 'org.springframework:spring-web:6.0.8'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
   implementation 'org.apache.shiro:shiro-spring:1.11.0'
   implementation 'org.aspectj:aspectjweaver:1.9.19'
@@ -48,7 +49,7 @@ dependencies {
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
-  testImplementation 'org.springframework:spring-test:6.0.7'
+  testImplementation 'org.springframework:spring-test:6.0.8'
   testImplementation 'javax.interceptor:javax.interceptor-api:1.2.1'
   testImplementation 'ch.qos.logback:logback-classic:1.4.1'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.0'
@@ -75,8 +76,8 @@ dependencies {
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
   testImplementation "org.projectlombok:lombok:1.18.24"
-  testImplementation "org.springframework:spring-test:6.0.7"
-  testImplementation "org.springframework.boot:spring-boot:3.0.5"
+  testImplementation "org.springframework:spring-test:6.0.8"
+  testImplementation "org.springframework.boot:spring-boot:3.1.0-M2"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
@@ -140,5 +141,7 @@ repositories {
               })
     }
   }
+  maven { url 'https://repo.spring.io/milestone' }
 }
+
 
