--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+
+    testImplementation 'org.awaitility:awaitility:4.2.0'\
 }
 
 java.sourceCompatibility = JavaVersion.VERSION_17
