--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -25,9 +25,9 @@ dependencies {
   compileOnly "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:6.0.8'
-  api 'org.springframework:spring-tx:6.0.8'
-  api 'org.springframework:spring-web:6.0.8'
+  api 'org.springframework:spring-context-support:6.0.9'
+  api 'org.springframework:spring-tx:6.0.9'
+  api 'org.springframework:spring-web:6.0.9'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
   implementation 'org.apache.shiro:shiro-spring:1.11.0'
   implementation 'org.aspectj:aspectjweaver:1.9.19'
@@ -49,7 +49,7 @@ dependencies {
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
-  testImplementation 'org.springframework:spring-test:6.0.8'
+  testImplementation 'org.springframework:spring-test:6.0.9'
   testImplementation 'javax.interceptor:javax.interceptor-api:1.2.1'
   testImplementation 'ch.qos.logback:logback-classic:1.4.1'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.0'
@@ -76,8 +76,8 @@ dependencies {
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
   testImplementation "org.projectlombok:lombok:1.18.24"
-  testImplementation "org.springframework:spring-test:6.0.8"
-  testImplementation "org.springframework.boot:spring-boot:3.1.0-M2"
+  testImplementation "org.springframework:spring-test:6.0.9"
+  testImplementation "org.springframework.boot:spring-boot:3.1.0"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
