--- a/spring-data-vmware-gemfire/gradle.properties
+++ b/spring-data-vmware-gemfire/gradle.properties
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-springDataVersion=3.0.4
+springDataVersion=3.0.7
+springFrameworkVersion=6.0.10
 
 testJVMVer=17
