SDGF-108 : Update dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 #
 
 group = com.vmware.gemfire
-version = 1.0.0-build.9999
+version = 1.0.1-build.9999
 gemfireBaseVersion = 10.0
 
 additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
@@ -14,7 +14,7 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=10.0.0-build.1645
+gemfireVersion=10.0.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
