--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -24,14 +24,14 @@ dependencies {
   compileOnly "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:6.0.7'
-  api 'org.springframework:spring-tx:6.0.7'
-  api 'org.springframework:spring-web:6.0.7'
+  api "org.springframework:spring-context-support:$springFrameworkVersion"
+  api "org.springframework:spring-tx:$springFrameworkVersion"
+  api "org.springframework:spring-web:$springFrameworkVersion"
   api "org.springframework.data:spring-data-commons:$springDataVersion"
   implementation 'org.apache.shiro:shiro-spring:1.11.0'
   implementation 'org.aspectj:aspectjweaver:1.9.19'
-  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.3'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
   runtimeOnly 'antlr:antlr:2.7.7'
   compileOnly('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
@@ -48,9 +48,9 @@ dependencies {
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
-  testImplementation 'org.springframework:spring-test:6.0.7'
-  testImplementation 'javax.interceptor:javax.interceptor-api:1.2.1'
-  testImplementation 'ch.qos.logback:logback-classic:1.4.1'
+  testImplementation "org.springframework:spring-test:$springFrameworkVersion"
+  testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
+  testImplementation 'ch.qos.logback:logback-classic:1.4.8'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.0'
   testImplementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
   testImplementation 'org.apache.derby:derbyLocale_zh_TW:10.9.1.0'
@@ -67,16 +67,15 @@ dependencies {
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-  testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.1'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+  testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.3'
 
   testImplementation "junit:junit:4.13.2"
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
   testImplementation "org.projectlombok:lombok:1.18.24"
   testImplementation "org.springframework:spring-test:6.0.7"
-  testImplementation "org.springframework.boot:spring-boot:3.0.5"
+  testImplementation "org.springframework.boot:spring-boot:3.0.8"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
