--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -26,14 +26,14 @@ dependencies {
   compileOnly "com.vmware.gemfire:geode-deployment-legacy:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:5.3.26'
-  api 'org.springframework:spring-tx:5.3.26'
-  api 'org.springframework:spring-web:5.3.26'
+  api 'org.springframework:spring-context-support:5.3.28'
+  api 'org.springframework:spring-tx:5.3.28'
+  api 'org.springframework:spring-web:5.3.28'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
   implementation 'org.apache.shiro:shiro-spring:1.11.0'
   implementation 'org.aspectj:aspectjweaver:1.9.19'
-  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.3'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
   runtimeOnly 'antlr:antlr:2.7.7'
   compileOnly('javax.enterprise:cdi-api:1.2') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
@@ -52,18 +52,19 @@ dependencies {
   testImplementation 'org.apache.geronimo.specs:geronimo-jcdi_2.0_spec:1.0.1'
   testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
   testImplementation 'javax.el:el-api:2.2'
-  testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+  testImplementation 'ch.qos.logback:logback-classic:1.2.12'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.17.2'
   testImplementation 'javax.annotation:javax.annotation-api:1.3.2'
   testImplementation 'org.apache.derby:derbyLocale_zh_TW:10.9.1.0'
   testImplementation 'org.apache.openwebbeans:openwebbeans-se:2.0.27'
   testImplementation 'org.assertj:assertj-core:3.21.0'
   testImplementation 'org.iq80.snappy:snappy:0.4'
+  testImplementation 'org.springframework:spring-test:5.3.28'
+
   testImplementation('com.vmware.gemfire:spring-test-gemfire-9.15-2.7:1.0.0')
   testImplementation('org.springframework.shell:spring-shell:1.2.0.RELEASE') {
     exclude group: 'com.google.guava', module: 'guava'
   }
-  testImplementation 'edu.umd.cs.mtc:multithreadedtc:1.01'
   testImplementation('org.mockito:mockito-core:3.12.4') {
     force = true
   }
