SDGF-108 : Add Javadoc and Source artifacts

--- a/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
+++ b/build-tools/publishing/src/main/groovy/gemfire-repo-artifact-publishing.gradle
@@ -8,7 +8,7 @@ plugins {
 project.ext.set('constrainVersionInBom', true)
 
 def license = '''
-  Copyright (c) VMware, Inc. 2022. All rights reserved.
+  Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
   SPDX-License-Identifier: Apache-2.0
   '''
 
