--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -10,6 +10,15 @@ plugins {
     id 'spring-java-jar'
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+javadoc{
+    failOnError=false
+}
+
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
 project.ext.set("pomProjectArtifactName", "spring-data-3.0-gemfire-${gemfireBaseVersion}")
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
