SDGF-125: Update GemFire version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@
 
 group = com.vmware.gemfire
 version = 1.0.1-build.9999
-gemfireBaseVersion = 10.0
+gemfireBaseVersion = 10.1
 
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 7.4
 
-gemfireVersion=10.0.0
+gemfireVersion=10.1.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
