--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -18,7 +18,7 @@ javadoc{
 }
 
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
-project.ext.set("pomProjectArtifactName", "spring-data-2.7-gemfire-${gemfireBaseVersion}")
+project.ext.set("pomProjectArtifactName", "spring-data-2.7-gemfire-${getGemFireBaseVersion()}")
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
 
 dependencies {
@@ -111,4 +111,12 @@ repositories {
               });
     }
   }
+}
+
+String getGemFireBaseVersion() {
+  def split = "${gemfireVersion}".split("\\.")
+  if (split.length < 2) {
+    throw new RuntimeException("gemfireVersion is malformed")
+  }
+  return "${split[0]}.${split[1]}"
 }
