SDGF-128: Pull base version from GemFire version

--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
-project.ext.set("pomProjectArtifactName", "spring-data-3.1-gemfire-${gemfireBaseVersion}")
+project.ext.set("pomProjectArtifactName", "spring-data-3.1-gemfire-${getGemFireBaseVersion()}")
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
 
 java {
@@ -151,6 +151,14 @@ repositories {
     }
   }
   maven { url 'https://repo.spring.io/milestone' }
+}
+
+String getGemFireBaseVersion() {
+  def split = "${gemfireVersion}".split("\\.")
+  if (split.length < 2) {
+    throw new RuntimeException("gemfireVersion is malformed")
+  }
+  return "${split[0]}.${split[1]}"
 }
 
 
