--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -20,7 +20,8 @@ java {
   withSourcesJar()
 }
 
-javadoc{
+javadoc {
+  title = "Spring Data for VMware GemFire Java API Reference"
   failOnError=false
 }
 
