SDGF-133: Update javadoc header

--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -15,8 +15,9 @@ java {
     withSourcesJar()
 }
 
-javadoc{
-    failOnError=false
+javadoc {
+  title = "Spring Data for VMware GemFire Java API Reference"
+  failOnError=false
 }
 
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
