SDGF-133: Update javadoc header

--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -13,7 +13,8 @@ java {
   withSourcesJar()
 }
 
-javadoc{
+javadoc {
+  title = "Spring Data for VMware GemFire Java API Reference"
   failOnError=false
 }
 
