--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -38,8 +38,8 @@ dependencies {
   api "org.springframework:spring-tx:$springFrameworkVersion"
   api "org.springframework:spring-web:$springFrameworkVersion"
   api "org.springframework.data:spring-data-commons:$springDataVersion"
-  implementation 'org.apache.shiro:shiro-spring:1.11.0'
-  implementation 'org.aspectj:aspectjweaver:1.9.19'
+  implementation 'org.apache.shiro:shiro-spring:1.12.0'
+  implementation 'org.aspectj:aspectjweaver:1.9.20'
   implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.3'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
   runtimeOnly 'antlr:antlr:2.7.7'
@@ -60,7 +60,7 @@ dependencies {
   }
   testImplementation "org.springframework:spring-test:$springFrameworkVersion"
   testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
-  testImplementation 'ch.qos.logback:logback-classic:1.4.8'
+  testImplementation 'ch.qos.logback:logback-classic:1.4.11'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.0'
   testImplementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
   testImplementation 'org.apache.derby:derbyLocale_zh_TW:10.9.1.0'
@@ -83,9 +83,9 @@ dependencies {
   testImplementation "junit:junit:4.13.2"
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
-  testImplementation "org.projectlombok:lombok:1.18.24"
-  testImplementation "org.springframework:spring-test:6.0.7"
-  testImplementation "org.springframework.boot:spring-boot:3.0.8"
+  testImplementation "org.projectlombok:lombok:1.18.30"
+  testImplementation "org.springframework:spring-test:$springFrameworkVersion"
+  testImplementation "org.springframework.boot:spring-boot:3.0.11"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
