--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 project.ext.set("pomProjectLongName", "Spring Data VMware GemFire")
-project.ext.set("pomProjectArtifactName", "spring-data-3.1-gemfire-${getGemFireBaseVersion()}")
+project.ext.set("pomProjectArtifactName", "spring-data-3.2-gemfire-${getGemFireBaseVersion()}")
 project.ext.set("pomProjectDescription", "Spring Data For VMware GemFire")
 
 java {
@@ -35,9 +35,9 @@ dependencies {
   compileOnly "com.vmware.gemfire:gemfire-deployment-chained-classloader:$gemfireVersion"
 
   implementation 'javax.cache:cache-api:1.1.1'
-  api 'org.springframework:spring-context-support:6.0.12'
-  api 'org.springframework:spring-tx:6.0.12'
-  api 'org.springframework:spring-web:6.0.12'
+  api 'org.springframework:spring-context-support:6.1.0-RC1'
+  api 'org.springframework:spring-tx:6.1.0-RC1'
+  api 'org.springframework:spring-web:6.1.0-RC1'
   api "org.springframework.data:spring-data-commons:$springDataVersion"
   implementation 'org.apache.shiro:shiro-spring:1.12.0'
   implementation 'org.aspectj:aspectjweaver:1.9.20.1'
@@ -59,7 +59,6 @@ dependencies {
   testImplementation('jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1') {
     exclude group: 'javax.annotation', module: 'jsr250-api'
   }
-  testImplementation 'org.springframework:spring-test:6.0.12'
   testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
   testImplementation 'ch.qos.logback:logback-classic:1.4.11'
   testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.19.0'
@@ -86,8 +85,8 @@ dependencies {
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
   testImplementation "org.projectlombok:lombok:1.18.30"
-  testImplementation "org.springframework:spring-test:6.0.12"
-  testImplementation "org.springframework.boot:spring-boot:3.1.4"
+  testImplementation "org.springframework:spring-test:6.1.0-RC1"
+  testImplementation "org.springframework.boot:spring-boot:3.2.0-M3"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
