SDGF-164: Compile using -parameters flag due to removal of LocalVariableTableParameterNameDiscoverer.

--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -25,6 +25,10 @@ javadoc {
   failOnError=false
 }
 
+tasks.withType(JavaCompile).configureEach {
+  options.compilerArgs << '-parameters'
+}
+
 dependencies {
   compileOnly "com.vmware.gemfire:gemfire-core:$gemfireVersion"
   compileOnly "com.vmware.gemfire:gemfire-logging:$gemfireVersion"
