--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -1,11 +1,10 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-import com.google.cloud.storage.BlobId;
-import com.google.cloud.storage.BlobInfo;
-import com.google.cloud.storage.Storage;
-import com.google.cloud.storage.StorageOptions;
-
 // Copyright (c) VMware, Inc. 2022. All rights reserved.
 // SPDX-License-Identifier: Apache-2.0
+import org.apache.tools.ant.taskdefs.condition.Os
+import com.google.cloud.storage.BlobId
+import com.google.cloud.storage.BlobInfo
+import com.google.cloud.storage.Storage
+import com.google.cloud.storage.StorageOptions
 
 buildscript {
   dependencies {
