SDGF-180: Convert tests to use Testcontainers

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ org.gradle.workers.max=3
 
 docsGCSBucket=
 docsGCSProject=
+
+springTestGemfireDockerImage=dev.registry.pivotal.io/pivotal-gemfire/vmware-gemfire:blessed-10.1-jdk17
